# qb-examples

./: CMakeLists.txt  README.md
core/: CMakeLists.txt  README.md  example10_distributed_computing.cpp  example1_basic_actors.cpp  example1_simple_actor.cpp  example2_basic_actors.cpp  example2_multicore.cpp  example3_lifecycle.cpp  example3_multicore.cpp  example4_lifecycle.cpp  example5_timers.cpp  example6_shared_queue.cpp  example7_pub_sub.cpp  example8_state_machine.cpp  example9_trading_system.cpp  simple_actor.cpp
core_io/: CMakeLists.txt  README.md
core_io/chat_tcp/: CMakeLists.txt  README.md
core_io/chat_tcp/client/: CMakeLists.txt  ClientActor.cpp  ClientActor.h  InputActor.cpp  InputActor.h  main.cpp
core_io/chat_tcp/server/: AcceptActor.cpp  AcceptActor.h  CMakeLists.txt  ChatRoomActor.cpp  ChatRoomActor.h  ChatSession.cpp  ChatSession.h  ServerActor.cpp  ServerActor.h  main.cpp
core_io/chat_tcp/shared/: CMakeLists.txt  Events.h  Protocol.cpp  Protocol.h
core_io/file_monitor/: CMakeLists.txt  README.md  events.h  main.cpp  processor.cpp  processor.h  watcher.cpp  watcher.h
core_io/file_processor/: CMakeLists.txt  file_manager.h  file_worker.h  main.cpp  messages.h
core_io/message_broker/: CMakeLists.txt  README.md
core_io/message_broker/client/: CMakeLists.txt  ClientActor.cpp  ClientActor.h  InputActor.cpp  InputActor.h  main.cpp
core_io/message_broker/server/: AcceptActor.cpp  AcceptActor.h  BrokerSession.cpp  BrokerSession.h  CMakeLists.txt  ServerActor.cpp  ServerActor.h  TopicManagerActor.cpp  TopicManagerActor.h  main.cpp
core_io/message_broker/shared/: CMakeLists.txt  Events.h  Protocol.cpp  Protocol.h
io/: CMakeLists.txt  README.md  example1_async_io.cpp  example2_file_io.cpp  example3_tcp_networking.cpp  example4_udp_networking.cpp  example5_custom_protocol.cpp  example5_memory_filesystem.cpp  example6_custom_protocol.cpp
qbm/: README.md
qbm/http/: 01_hello_world_server.cpp  02_simple_client.cpp  03_basic_routing.cpp  04_middleware_demo.cpp  05_controller_pattern.cpp  06_async_handlers.cpp  07_rest_api_json.cpp  08_static_files.cpp  09_jwt_auth.cpp  10_request_validation.cpp  11_https_server.cpp  12_http2_server.cpp  CMakeLists.txt  README.md
qbm/http/resources/: README.md
qbm/http/resources/http2/: data.json  http2-demo.js  index.html  styles.css
qbm/http/resources/static/: about.html  data.json  index.html  main.js  sample.txt  styles.css  upload.html  upload.js
qbm/pgsql/: CMakeLists.txt  README.md  example1_basic_query.cpp  example2_prepared_statements.cpp  example3_transaction_management.cpp  example4_data_types.cpp  example5_error_handling.cpp
qbm/redis/: CMakeLists.txt  README.md  example1_basic_connection.cpp  example2_hash_operations.cpp  example3_list_operations.cpp  example4_async_operations.cpp  example5_pubsub_example.cpp  example6_transaction_example.cpp  example7_stream_processor.cpp  example8_complex_actor_system.cpp
qbm/ws/: 01_chat_server.cpp  02_chat_client.cpp  CMakeLists.txt  README.md
qbm/ws/resources/chat/: chat.css  chat.js  index.html
